@@ -8,6 +8,9 @@
 ------------------------------------------------------------------------------
   * Bugfix: Gedafe Pearls didn't work with Konqueror and Safari.
 
+  * Much improved search functionality. It is now possible to search on
+    multiple fields, on all fields at once and using special operators
+
   * New widgets: format_number, format_date, format_timestamp.
     Just like normal text fields, but the values get converted with
     PostgreSQL's to_char/to_number/to_timestamp/to_date formatting functions
